# project-template

backend/: .env.template  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  middlewares.md  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
backend/core/: errors.py  firebase.py  logging.py  logging_context.py
backend/database/: core.py  models.py  setup.py
backend/grafana/dashboards/: dashboard.json
backend/middlewares/: auth.py  logging.py  request_id.py  security_headers.py  size_limit.py  timeout.py  validation.py
backend/migrations/: env.py
backend/migrations/versions/: 45daf2ffb9c3_delete_unused_sessions_and_token_.py
backend/pydantic_models/: schemas.py  validation.py
backend/redis_data/: dump.rdb
backend/redis_data/appendonlydir/: appendonly.aof.1.base.rdb
backend/routers/: auth.py  example_router.py  firebase_auth.py  health.py
backend/scripts/: generate_token.py
backend/security/: auth.py  docs.py  redis.py  session_manager.py
backend/services/: auth_service.py  logic.py
backend/tests/: conftest.py  test_auth_failures.py  test_auth_flow.py  test_errors.py  test_integration_logging.py  test_middleware_size_limit.py  test_middleware_timeout.py  test_middleware_validation.py  test_security_headers.py  test_social_auth.py
frontend/: .env.template  App.js  README.md  app.config.js  config.js  firebaseConfig.js  firebaseConfig.native.js  metro.config.js  package-lock.json  package.json  tailwind.config.js
frontend/screens/: LoginScreen.js  SignupScreen.js
(+2 files in other folders)
